<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_one">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@mipmap/spalsh_round" />

            <com.rol.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_text"
                android:textColor="@color/splash_end_gradiant"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                app:customFont="Helvetica_light.ttf" />

        </LinearLayout>


        <com.rol.widgets.CustomButton
            android:id="@+id/registration_btn"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@mipmap/btn_bg"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:customFontButton="Helvetica_light.ttf" />


        <com.rol.widgets.CustomButton
            android:id="@+id/login_btn"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@mipmap/btn_bg"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:customFontButton="Helvetica_light.ttf" />


        <com.rol.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/or_text"
            android:textColor="@color/base_header_color"
            android:textSize="@dimen/_13ssp"
            app:customFont="Helvetica_light.ttf" />


        <LinearLayout
            android:id="@+id/facebook_btn"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/fb"
            android:orientation="horizontal" />
    </LinearLayout>


    <View
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_above="@id/bottom_layout"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/base_line_color" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:orientation="horizontal">

            <com.rol.widgets.CustomTextView
                android:id="@+id/terms_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/terms_condition"
                android:textColor="@color/login_text_color"
                android:textSize="@dimen/_11ssp"
                app:customFont="Helvetica_light.ttf" />

            <com.rol.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:text="@string/and_text"
                android:textColor="@color/login_text_color"
                android:textSize="@dimen/_11ssp"
                app:customFont="Helvetica_light.ttf" />

            <com.rol.widgets.CustomTextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/privacy_policy_text"
                android:textColor="@color/login_text_color"
                android:textSize="@dimen/_11ssp"
                app:customFont="Helvetica_light.ttf" />


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>