<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ListView
        android:id="@+id/facebook_friend_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="@dimen/_2sdp"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/facebook_frd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <com.rol.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_connected"
            android:textColor="@color/radio_text_color"
            android:textSize="@dimen/_12ssp"
            app:customFont="Helvetica_light.ttf" />

        <com.rol.widgets.CustomButton
            android:id="@+id/connect_with_fb_btn"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/squar_btn"
            android:gravity="center"
            android:text="@string/connect_with_fb"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:customFont="Helvetica_light.ttf" />

        <com.rol.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/connect_fb_description"
            android:textColor="@color/radio_text_color"
            android:textSize="@dimen/_12ssp"
            app:customFont="Helvetica_light.ttf" />


    </LinearLayout>


</RelativeLayout>
