<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_30sdp"
    android:layout_marginRight="@dimen/_30sdp"
    android:background="@drawable/dialog_bg"

    android:orientation="vertical">

    <com.rol.widgets.CustomTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/helper"
        android:textColor="@color/base_header_color"
        android:textSize="@dimen/_11ssp"
        app:customFont="Helvetica_light.ttf" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="horizontal">


        <com.rol.widgets.CustomButton
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_37sdp"
            android:layout_weight="0.5"
            android:background="@mipmap/btn_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:customFontButton="Helvetica_light.ttf" />

        <com.rol.widgets.CustomButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_37sdp"
            android:layout_weight="0.5"
            android:background="@mipmap/btn_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:customFontButton="Helvetica_light.ttf" />


    </LinearLayout>


</LinearLayout>